<resources>
    <string name="app_name">Tracker Demo (Kotlin)</string>

    <string name="main_demo_header">Kotlin Android Tracker Demo</string>
    <string name="main_demo_info">
        To launch the demonstration simply click the button below.
        The demo will send every combination of event construction available to the tracker to an
        endpoint you will enter on the demo page.
    </string>
    <string name="link_header">Useful Links:</string>
    <string name="link_tech_docs">- API Documentation</string>
    <string name="link_docs">- Documentation</string>
    <string name="link_repo">- Github Repository</string>

    <string name="main_demo_button">Tracker Demo</string>

    <string name="title_activity_demo">Tracker Demo</string>
    <string name="demo_header">Tracker Demo (Kotlin) </string>
    <string name="demo_info">Enter settings below and then hit start.</string>

    <string name="uri_text">URI:</string>
    <string name="emitter_config_text">Config:</string>
    <string name="emitter_type_text">Type:</string>
    <string name="data_collection_text">Collection:</string>
    <string name="emitter_logging_text">App logging:</string>
    <string name="emitter_statistics">Metrics:</string>
    <string name="created_events">Made: 0</string>
    <string name="sent_events">Sent: 0</string>
    <string name="emitter_status">Running: no</string>
    <string name="online_status">Online: no</string>
    <string name="database_size">DB Size: 0</string>
    <string name="session_index">Session #: 0</string>

    <string name="radio_remote_config">Remote</string>
    <string name="radio_local_config">Local</string>
    <string name="radio_get">GET</string>
    <string name="radio_post">POST</string>
    <string name="radio_data_on">ON</string>
    <string name="radio_data_off">OFF</string>

    <string name="uri_hint">Enter collector URI or remote config URI…</string>
    <string name="start">Start!</string>
    <string name="tab">Chrome Tab</string>
    <string name="video">Video</string>

    <string name="running_1">Running.  </string>
    <string name="running_2">Running . </string>
    <string name="running_3">Running  .</string>
    <string name="title_activity_media">Media playback</string>
    <string name="id_text">Id</string>
    <string name="case_text">Case</string>
    <string name="description_text">Description</string>
    <string name="case_name">Case Name</string>
    <string name="json_schema">JSON Schema</string>
    <string name="update_global_context">Update Global Context:</string>
    <string name="send_event">Send Event</string>
</resources>
