<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationContentDescription="Navigate Back"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            android:fitsSystemWindows="true"
            app:title="Send Screen View"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/caseNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/case_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/itemCaseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caseNameText"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemCaseName"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/jsonSchemaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/json_schema"
        app:layout_constraintTop_toBottomOf="@id/itemDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/itemJSONSchema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/jsonSchemaText"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?attr/textAppearanceListItem" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_global_context"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/itemJSONSchema"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_event"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox"/>

</androidx.constraintlayout.widget.ConstraintLayout>